tests/samples/negative/traits/trait_method_missing_bound.ax
module trait_method_missing_bound;

trait Reader {
    fn read(self: &Self) -> i32;
}

fn use_reader[T](value: &T) -> i32 {
    return value.read();
}

fn main() -> i32 {
    return 0;
}
